show download resume button on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -423,6 +423,10 @@ footer {
     max-width: 960px;
   }
 
+  .download-resume-mobile {
+    display: none;
+  }
+
   #contact {
     .form-container {
       width: 50%;
