--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .btn-primary {
@@ -35,10 +35,10 @@ body {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   background-color: #c3d2d5;
   -webkit-animation-duration: 2s;
-  animation-duration: 2s;
+          animation-duration: 2s;
 }
 
 /* Target blank icon */
@@ -109,7 +109,7 @@ nav a::after {
 
 nav a:hover::after {
   -webkit-transform: translateY(-10px);
-  transform: translateY(-10px);
+          transform: translateY(-10px);
   opacity: 1;
 }
 
@@ -133,16 +133,16 @@ main .hero-area-container .hero-area {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
+      flex-wrap: nowrap;
   min-height: inherit;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
   -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 main .hero-area-container .hero-area .greetings {
@@ -170,14 +170,7 @@ main .hero-area-container .hero-area .about-me-summary {
   width: 100%;
   height: 50px;
   background: #1e212b;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#1e212b),
-    color-stop(26%, #1e212b),
-    to(#c3d2d5)
-  );
+  background: -webkit-gradient(linear, left top, left bottom, from(#1e212b), color-stop(26%, #1e212b), to(#c3d2d5));
   background: linear-gradient(180deg, #1e212b 0%, #1e212b 26%, #c3d2d5 100%);
 }
 
@@ -187,14 +180,7 @@ main .hero-area-container .hero-area .about-me-summary {
   width: 100%;
   height: 50px;
   background: #c3d2d5;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#c3d2d5),
-    color-stop(27%, #c3d2d5),
-    color-stop(74%, #1e212b)
-  );
+  background: -webkit-gradient(linear, left top, left bottom, from(#c3d2d5), color-stop(27%, #c3d2d5), color-stop(74%, #1e212b));
   background: linear-gradient(180deg, #c3d2d5 0%, #c3d2d5 27%, #1e212b 74%);
 }
 
@@ -230,10 +216,10 @@ main .hero-area-container .hero-area .about-me-summary {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-line-pack: center;
-  align-content: center;
+      align-content: center;
   padding: 0;
   border: 0.5px solid #ffe74c;
   margin-bottom: 1rem;
@@ -246,14 +232,14 @@ main .hero-area-container .hero-area .about-me-summary {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100%;
   width: 100%;
 }
@@ -272,14 +258,14 @@ main .hero-area-container .hero-area .about-me-summary {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #stack .ml-skills-container .card .card-body p {
@@ -343,7 +329,7 @@ section#projects {
   padding: 12px 20px;
   margin-bottom: 8px;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   border: none;
   border-bottom: 2px solid #645dd7;
   /* Form Validation  */
@@ -382,11 +368,11 @@ section#projects {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: baseline;
-  -ms-flex-align: baseline;
-  align-items: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
 .socials-container .social-container {
@@ -394,11 +380,11 @@ section#projects {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: white;
   border-radius: 33px;
   padding: 8px;
@@ -421,7 +407,7 @@ footer .socials-container {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
   width: 80%;
   height: 25px;
   background-color: unset;
@@ -450,6 +436,9 @@ footer .socials-container {
 @media only screen and (min-width: 992px) {
   .hero-area-container {
     max-width: 960px;
+  }
+  .download-resume-mobile {
+    display: none;
   }
   #contact .form-container {
     width: 50%;
