--- a/css/style.scss
+++ b/css/style.scss
@@ -152,6 +152,10 @@ main {
         //border: white 1px solid;
       }
 
+      .download-resume-mobile {
+        color: white;
+      }
+
       .hero-text {
         color: $site-yellow;
         text-transform: uppercase;
